# adaptive-volatility-arbitrage

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEVELOPMENT_NOTES.md  ENGINEERING_LOG.md  LICENSE  README.md  STRUCTURE.md  demo_heston.py  pyproject.toml
.github/workflows/: tests.yml
backend/: main.py
backend/api/: backtest.py  costs.py  forecast.py  heston.py  market.py  options.py  paper_trading.py  snapshots.py
backend/schemas/: backtest.py  costs.py  forecast.py  heston.py  market.py  options.py  paper_trading.py
backend/services/: backtest_service.py  cache_service.py  cost_service.py  delta_hedged_service.py  forecast_service.py  heston_service.py  live_market_service.py  monte_carlo_service.py  options_service.py  paper_trading_db.py  paper_trading_system.py  snapshot_db.py  ttl_cache.py
backend/tests/: test_heston_api.py  test_phase2_api.py
benchmarks/: latency_benchmark.py
config/: ablation_config.yaml  default.yaml  mcpt_config.yaml  volatility_arb.yaml  volatility_arb_aggressive.yaml  volatility_arb_conservative.yaml  volatility_arb_kelly_dd.yaml  volatility_arb_kelly_only.yaml  volatility_arb_optimized.yaml  volatility_arb_phase1.yaml
cpp_execution/: CMakeLists.txt  README_CPP.md  USAGE_GUIDE.md  structure.txt
cpp_execution/include/: lock_free_queue.hpp  order_book.hpp
cpp_execution/proto/: messages.proto
cpp_execution/src/: order_book.cpp  server.cpp
cpp_heston/: bindings.cpp  heston_fft.hpp  setup.py
data/: snapshots.db  spy_ohlc.csv
docs/: DATA_AUDIT_REPORT.md  PROJECT_STATUS.md
docs/guides/: DASHBOARD_SETUP.md
examples/: demo_uncertainty_sizing.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: backtestApi.js  client.js  costsApi.js  deltaHedgedApi.js  forecastApi.js  hestonApi.js  marketApi.js  optionsApi.js  paperTradingApi.js
frontend/src/components/Charts/: EquityCurveChart.jsx  HestonHeatmap.jsx  HestonSurface3D.jsx  PnLHeatmap.jsx  Surface3D.jsx  SurfaceHeatmap.jsx  UncertaintyChart.jsx
frontend/src/components/Controls/: ParameterSlider.jsx
frontend/src/components/Greeks/: GreeksDisplay.jsx
frontend/src/components/LiveMarket/: LiveModeToggle.jsx  LiveQuoteDisplay.jsx  MarketStatusBadge.jsx  index.js
frontend/src/components/MonteCarlo/: DistributionHistogram.jsx  MonteCarloPanel.jsx  RiskProbabilityTable.jsx
frontend/src/components/Results/: MetricsPanel.jsx
frontend/src/components/Snapshots/: SnapshotPanel.jsx
frontend/src/hooks/: useBSPricing.js  useDebounce.js  useHestonPricing.js  useLiveMarket.js  usePaperTrading.js  useSnapshots.js  useSurfaceExplorer.js
frontend/src/pages/PaperTrading/: index.jsx
frontend/src/store/: backtestStore.js  bsPlaygroundStore.js  forecastStore.js  hestonStore.js  liveMarketStore.js  paperTradingStore.js  snapshotStore.js  surfaceExplorerStore.js
frontend/src/utils/: plotlyTheme.js
live_trading/: __init__.py  demo_paper_trader.py  mock_execution_gateway.py  trades.db
notebooks/: heston_regime_analysis.ipynb
reports/: optimization_results.csv  signal_accuracy.csv  suggested_weights.json  trade_signals.csv  validation_full_run.json  validation_quick_test.json  validation_results.json
reports/ablation_study/: ablation_results.csv  ablation_results.json  ablation_summary.txt
reports/ablation_study/temp_configs/: config_Baseline_(v1.0).yaml  config_E1__Regime_Transitions.yaml  config_E2__Term_Structure_Leverage.yaml  config_E3__Vol-of-Vol_(VVIX).yaml  config_E4__Intraday_Vol_Patterns.yaml  config_E5__Dynamic_Weighting.yaml  config_E6__Asymmetric_Profit.yaml  config_E7a__Parkinson_RV.yaml  config_E7b__Garman-Klass_RV.yaml  config_E7c__Yang-Zhang_RV.yaml  config_E7d__Ensemble_RV.yaml
reports/mcpt_baseline/: mcpt_report.txt
reports/mcpt_validation/: mcpt_report.txt
research/: README.md  requirements_research.txt
scripts/: analyze_signal_accuracy.py  convert_json_to_parquet.py  fetch_ohlc.py  optimize_sharpe.py  run_ablation_study.py  run_backtest.py  run_covid_stress_test.py  run_full_validation.py  run_integrated_backtest.py  run_monte_carlo.py  run_vol_arb_backtest.py  run_walkforward.py  validate_mcpt.py  validate_sharpe.py  visualize_backtest_comparison.py
src/volatility_arbitrage/: __init__.py
src/volatility_arbitrage/analysis/: monte_carlo.py
src/volatility_arbitrage/backtest/: __init__.py  engine.py  metrics.py  multi_asset_engine.py
src/volatility_arbitrage/core/: __init__.py  config.py  types.py
src/volatility_arbitrage/data/: __init__.py  fetcher.py  options_fetcher.py  real_options_loader.py  yahoo.py
src/volatility_arbitrage/execution/: __init__.py  costs.py
src/volatility_arbitrage/models/: __init__.py  bayesian_forecaster.py  bayesian_lstm.py  black_scholes.py  heston.py  regime.py  volatility.py
src/volatility_arbitrage/optimization/: walk_forward.py
src/volatility_arbitrage/risk/: __init__.py  drawdown_manager.py  position_sizing.py  uncertainty_sizing.py
src/volatility_arbitrage/strategy/: __init__.py  base.py  veto_manager.py  volatility_arbitrage.py
src/volatility_arbitrage/testing/: __init__.py  validation_decision.py  validation_result.py
src/volatility_arbitrage/utils/: __init__.py  logging.py  visualization.py
tests/: __init__.py  conftest.py
tests/test_backtest/: test_delta_hedged_engine.py  test_delta_hedger.py  test_engine_fixes.py  test_multi_asset_engine.py  test_pnl_attribution.py  test_real_options_integration.py
tests/test_core/: test_config_unified.py  test_types.py
tests/test_data/: test_real_options_loader_cache.py
tests/test_execution/: __init__.py  test_costs.py
tests/test_models/: test_bayesian_forecaster.py  test_bayesian_lstm.py  test_black_scholes.py  test_heston.py  test_regime.py
tests/test_risk/: __init__.py  test_uncertainty_sizing.py
tests/test_strategy/: test_delta_rebalancing.py  test_exit_logic.py  test_profit_taking.py  test_qv_position_tracking.py  test_smooth_consensus.py  test_underlying_hedge_isolation.py
tests/test_testing/: __init__.py  test_mcpt.py  test_mcpt_overfit_detection.py
(+25 files in other folders)
